# repo-intel

./: .cspell.json  .gitignore  .markdownlinkcheck-external.json  .markdownlinkcheck.json  .markdownlint.json  .pre-commit-config.yaml  .yamllint  Cargo.toml  README.md  setup-pre-commit.sh
.github/workflows/: docs-ci.yml  rust-ci.yml
01-project-selection/: AUTOMATION_OPPORTUNITIES.md  PROJECT_SELECTION_METHODOLOGY.md
crates/common-library/: Cargo.toml  README.md
crates/common-library/backups/452d0152-a70f-4c68-b0a5-ad790479013a/: metadata.json
crates/common-library/benches/: performance_benchmarks.rs
crates/common-library/examples/: advanced_usage.rs  basic_usage.rs
crates/common-library/src/: config.rs  error.rs  lib.rs  logging.rs  utils.rs
crates/common-library/src/http/: auth.rs  client.rs  mod.rs  rate_limiter.rs  retry.rs
crates/common-library/src/metrics/: growth.rs  mod.rs  normalization.rs  performance.rs  statistical.rs  trends.rs
crates/common-library/src/storage/: backup.rs  database.rs  filesystem.rs  migrations.rs  mod.rs
crates/common-library/src/validation/: errors.rs  integrity.rs  mod.rs  registry.rs  schema.rs  types.rs
crates/common-library/tests/: end_to_end_tests.rs  foundation_tests.rs  http_integration_tests.rs  integration_tests.rs  metrics_tests.rs  storage_tests.rs  validation_tests.rs
data/prompts/01-project-selection/: README.md  documentation-requirements.md
data/prompts/01-project-selection/category-representation/: README.md  approach-diversity.md  community-diversity.md
data/prompts/01-project-selection/project-selection-ranking/: README.md  quality-assessment.md  ranking-methodology.md  selection-criteria.md
docs/: DEVELOPMENT_GUIDELINES.md  PROJECT_DESIGN.md
docs/phases/01-project-selection/: AUTOMATION_OPPORTUNITIES.md  CANDIDATE_IDENTIFICATION_PLAN.md  PROJECT_SELECTION_METHODOLOGY.md  README.md
docs/phases/02-analysis/: README.md
docs/phases/03-pattern-synthesis/: README.md
docs/phases/04-template-generation/: README.md
docs/phases/05-guidelines-documentation/: README.md
docs/projects/: README.md
docs/projects/01-project-selection/: README.md
docs/projects/01-project-selection/common-library/: DESIGN.md  DESIGN.md.backup  IMPLEMENTATION_PLAN.md  README.md
docs/projects/01-project-selection/data-aggregator/: README.md
docs/projects/01-project-selection/github-api-collector/: DESIGN.md  IMPLEMENTATION_PLAN.md  README.md
docs/projects/01-project-selection/github-archive-collector/: DESIGN.md  README.md  RESEARCH_PLAN.md
docs/projects/01-project-selection/human-prompts/: README.md  category-representation.md  documentation-requirements.md  final-quality-assessment.md  pre-assessment-checklist.md  project-selection-ranking.md  quality-assurance.md
docs/projects/01-project-selection/human-prompts/category-representation/: README.md  approach-diversity.md  community-diversity.md  documentation-requirements.md  pre-assessment-checklist.md  quality-assurance.md  scale-diversity.md
docs/projects/01-project-selection/human-prompts/final-quality-assessment/: README.md  documentation-requirements.md  excellence-identification.md  final-validation.md  pre-assessment-checklist.md  quality-assurance.md  quality-standards.md
docs/projects/01-project-selection/human-prompts/project-selection-ranking/: README.md  documentation-requirements.md  pre-assessment-checklist.md  quality-assessment.md  quality-assurance.md  ranking-methodology.md  selection-criteria.md
docs/projects/01-project-selection/llm-orchestrator/: DESIGN.md  LLM_ABSTRACTION_STRATEGY.md  README.md
docs/projects/01-project-selection/metrics-calculator/: DESIGN.md  README.md
docs/projects/01-project-selection/package-manager-collector/: API_SCHEMAS.md  DESIGN.md  IMPLEMENTATION_PLAN.md  MOCKING_STRATEGY.md  README.md  SCHEMA.sql
docs/projects/01-project-selection/pattern-matcher/: DESIGN.md  README.md
docs/projects/01-project-selection/quality-filter/: DESIGN.md  README.md
docs/projects/01-project-selection/report-generator/: DESIGN.md  README.md
docs/projects/01-project-selection/repository-data-aggregator/: DESIGN.md  README.md
docs/projects/01-project-selection/trending-analyzer/: DESIGN.md  README.md
docs/projects/02-analysis/: README.md
docs/projects/02-analysis/github-api-collector/: README.md
docs/projects/data-aggregator/: README.md
docs/projects/github-api-collector/: README.md
docs/projects/metrics-calculator/: README.md
docs/projects/package-manager-collector/: README.md
docs/projects/pattern-matcher/: README.md
docs/projects/quality-filter/: README.md
docs/projects/report-generator/: README.md
docs/projects/trending-analyzer/: README.md
src/: main.rs
src/common-library/src/: config.rs  error.rs  lib.rs  logging.rs
src/package-manager-collector/: Cargo.toml  README.md
src/package-manager-collector/config/: mod.rs
src/package-manager-collector/models/: core.rs  mod.rs  registry.rs
src/package-manager-collector/src/: lib.rs  main.rs
src/package-manager-collector/src/models/: collection.rs  registry.rs
