[workspace]
members = [
    "src/common-library",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Repository Intelligence Team"]
license = "MIT"
repository = "https://github.com/jmalicki/repo-intel"
description = "Repository intelligence and analysis tools"

[workspace.dependencies]
# Common dependencies across all workspace members - updated to latest versions
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
base64 = "0.22"
diesel = { version = "2.1", features = ["sqlite"] }
diesel-async = { version = "0.7", features = ["sqlite"] }
flate2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
wiremock = "0.6"
tokio-test = "0.4"
