[package]
name = "repo-intel"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Repository Intelligence Team"]
license = "MIT"
repository = "https://github.com/jmalicki/repo-intel"
description = "Repository intelligence and analysis tools"
keywords = ["repository", "analysis", "intelligence", "metrics"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Main subcrates
common-library = { path = "crates/common-library" }

# Direct dependencies for main crate
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[[bin]]
name = "repo-intel"
path = "src/main.rs"
