[package]
name = "common-library"
version = "0.1.0"
edition = "2021"
description = "Shared functionality for Phase 1 project selection tools"
authors = ["Repository Intelligence Team"]
license = "MIT"
repository = "https://github.com/jmalicki/repo-intel"
keywords = ["http", "storage", "metrics", "validation", "logging"]
categories = ["web-programming::http-client", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "fs", "signal", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Database (for future phases)
diesel = { version = "2.0", features = ["sqlite"], optional = true }
diesel-async = { version = "0.7", features = ["sqlite"], optional = true }
bb8 = { version = "0.8", optional = true }
bb8-diesel = { version = "0.2", optional = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.21"

# Random number generation for jitter
fastrand = "2.0"

# Compression (for future phases)
flate2 = { version = "1.0", optional = true }

# Clap for CLI (for future phases)
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.0"

[features]
default = ["http"]
http = []
database = ["diesel", "diesel-async", "bb8", "bb8-diesel"]
compression = ["flate2"]
cli = ["clap"]
