[package]
name = "package-manager-collector"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Malicki <joseph@example.com>"]
description = "Collects package metadata from multiple package managers"
license = "MIT"

[dependencies]
# Database and ORM
diesel = { version = "2.1", features = ["sqlite", "chrono", "r2d2"] }
diesel-async = { version = "0.7", features = ["sqlite"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# URL handling
url = "2.0"

# Base64 encoding
base64 = "0.21"

# Async traits
async-trait = "0.1"

# Decimal arithmetic for financial/precise calculations
rust_decimal = { version = "1.32", features = ["serde"] }

# Common library (will be added as local dependency)
# common-library = { path = "../../common-library" }
